RESOLVED FIXED276268
ref.null accepts invalid type indices
https://bugs.webkit.org/show_bug.cgi?id=276268
Summary ref.null accepts invalid type indices
daniel_liu4
Reported 2024-07-05 14:07:03 PDT
Attachments
daniel_liu4
Comment 1 2024-07-05 14:09:03 PDT
EWS
Comment 2 2024-07-08 10:25:07 PDT
Committed 280743@main (f6a59631fa7d): <https://commits.webkit.org/280743@main> Reviewed commits have been landed. Closing PR #30529 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.