ref.null accepts invalid type indices https://bugs.webkit.org/show_bug.cgi?id=276268 rdar://130746860

Reviewed by Mark Lam.

ref.null only checks the low byte due to casting, meaning that invalid indices could be incorrectly treated as valid reference types.

* Source/JavaScriptCore/wasm/WasmFormat.h:
(JSC::Wasm::isValidHeapTypeKind):
(JSC::Wasm::heapTypeKindAsString):
* Source/JavaScriptCore/wasm/WasmParser.h:
(JSC::Wasm::ParserBase::parseBlockSignature):
(JSC::Wasm::ParserBase::parseHeapType):
(JSC::Wasm::ParserBase::parseValueType):

Canonical link: https://commits.webkit.org/280743@main